syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.Inventory";

package com.example.Inventory;

service Inventory {
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse) {}
  rpc GetItem(GetItemRequest) returns (GetItemResponse) {}
  rpc GetAllItems(GetAllItemsRequest) returns (GetAllItemsResponse) {}
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse) {}
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse) {}
  rpc DecreaseItemQuantity(DecreaseItemQuantityRequest) returns (DecreaseItemQuantityResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message CreateItemRequest {
  string name = 1;
  int32 quantity = 2;
  double price = 3;
  int32 userId = 4;
}

message CreateItemResponse {
  int32 status = 1;
  string error = 2;
  int32 id = 3;
}

message GetItemRequest {
  int32 id = 1;
}

message GetItemData {
  int32 id = 1;
  string name = 2;
  int32 quantity = 3;
  double price = 4;
}

message GetItemResponse {
  int32 status = 1;
  string error = 2;
  GetItemData data = 3;
}

message GetAllItemsRequest {}

message GetAllItemsResponse {
  int32 status = 1;
  string error = 2;
  repeated GetItemData data = 3;
}

message UpdateItemRequest {
  int32 id = 1;
  string name = 2;
  int32 quantity = 3;
  double price = 4;
}

message UpdateItemResponse {
  int32 status = 1;
  string error = 2;
  GetItemData data = 3;
}

message DeleteItemRequest {
  int32 id = 1;
}

message DeleteItemResponse {
  int32 status = 1;
  string error = 2;
}

message DecreaseItemQuantityRequest {
  int32 id = 1;
  int32 quantity = 2;
}

message DecreaseItemQuantityResponse {
  int32 status = 1;
  string error = 2;
}